[package]
name = "dkgith"
version = "0.0.1"
authors = ["Anonymous conference submission"]
edition = "2018"
description = "Implementation of verifiable encryption of discrete logarithms with the DKG-in-the-head approach"
license = "MIT"

[dependencies]
sha2 = "0.9.0"
hex = "0.4.0"
rand = "0.8"

ark-serialize = "0.4.2"
ark-std = "0.4.0"
ark-ff = { version = "0.4.2", features = [ "asm" ] }
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-secp256r1 = "0.4.0"

# Below is for benchmarking:
[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "dkgith_benchmarks"
harness = false
